# nbody6-p3t

./: README.md
ARchain/: FRAG  arc.f.use  chain.f
ARint/: setsys.f
Block/: SJA  STEP  TUE  XX  assess.f  delay.f  expel.f  impact.f.old  instar.f  kick.f  ksint.f  ksint.f.use  ksint.f.use2  ksintp.f  kslist.f  ksterm.f  pnpert2.f.save
GPU2/: CMakeLists.txt  Ncode  adjust.f  adjust.tree.f  auswert.f  auswert_iso.f  binlist.f  chfirr.tree.f  chlist.tree.f  chterm2.tree.f  cmfirr.tree.f  cmfirr2.tree.f  core.f  core.tree.f  cpertj.tree.f  cpertx.tree.f  cutoff.f  cutoff0.f  dcen.f  energy2.f  evolve_mf.f  fchain.tree.f  forcebo15.f  fpert.tree.f  fpoly0.f  fpoly0.leapfrog.f  fpoly0.tree.f  gpucor.f  gpuint.f  gpuint2.f  intgrt.leapfrog.f  intgrt.omp.f  intgrt.tree.f  jpred.tree.f  jpred2.tree.f  kcpert.tree.f  ksinit.tree.f  ksint.tree.f  kslist.tree.f  kspert.tree.f  (+25 more)
GPU2/irrlib/: gpuirr.avx.cpp  gpuirr.sse.cpp  gpuirr.tree.avx.cpp  gpuirr.tree.sse.cpp
GPU2/lib/: cdenslcl.cpp  cnbint.tree.cpp  cnbint5.cpp  double_env.cpp  fieldinfo.h  getproj.c  gpunb.bonsai.cpp  gpunb.velocity.cu  gpupot.gpu.cu  knn.cpp  sort.c  stopwatch.c  v4sf.h
GPU2/lib/Bonsai/: CMakeLists.txt
GPU2/lib/Bonsai/CUDAkernels/: dev_approximate_gravity_warp_new.cu  sortKernels.cu
GPU2/lib/Bonsai/cmake/Modules/: FindCUB.cmake
GPU2/lib/Bonsai/include/: my_cuda_rt.h  octree.h
GPU2/lib/Bonsai/src/: build.cpp  gpu_iterate.cpp  parallel.cpp  sort_bodies_gpu.cpp
GPU2/lib/outputs/: CMakeLists.txt  outputs.h
GPU2/lib/outputs/src/: oerrno.c  opnout.c  reclen.h
Ncode/: .swp  check.f  common6.h  core.f  data.f  define.f  delay.f  expel.f  fbulge.f  fdisk.f  fhalo.f  flyby.f  fnuc.f  forceir13.f  gcinit.f  gcint.f  hrplot.f  inext.f  input.f  instar.f  ksapo.f  ksint.f  ksint.f.save  kspert.f  mdot.f  modify.f  mydump.f  nbody6.f  offset.f  output.f  params.h  pnpert2.f.dummy  scale.f  tail0.f  triple.f  unpert.f  xtrnl0.f  xtrnlf.f  xtrnlt.f  xtrnlv.f  (+1 more)
outputs/: CMakeLists.txt  boundm.c  count_frames.c  info.c  list_frames.c  orbit.c  outputs.h  rtide.c  run_info.c  snapshot.c  stream.c  vel.c  wav.c
outputs/outputs/: vmath.h
outputs/src/: bound.c  center.c  clmass.c  cross.c  data.c  data.h  discard.c  discard.h  dot.c  forcebv15.c  forceir13.c  fpstart.c  freefrm.c  frmhdr.c  frmlst.c  frmmeta.c  frmsz.c  galforce.c  hdr.c  itrprt.c  mag2.c  meta.c  meta.h  numfrm.c  oerrno.c  oerrno.h  oerror.c  oerrstr.c  oerrstr.h  ofail.c  rdfrm.c  readrec.c  readrec.h  reclen.c  reclen.h  rtide.c  skpfrm.c  vmul.c  vsub.c
profiles/: ngc6397.txt
scripts/: movie.py
